syntax = "proto3";

package fun.dodo.tools.meta;

option java_multiple_files = true;
option java_generate_equals_and_hash = true;

option java_package = "fun.dodo.tools.meta";
option java_outer_classname = "EchoProto";

option csharp_namespace = "Dodo.tools.Meta.KnownTypes";

option objc_class_prefix = "WKM";

import "google/protobuf/any.proto";

// 清单
message EchoList {
    // 主体
    repeated google.protobuf.Any object = 1;
    // 总条数
    uint32 count = 2;
    // 页数
    uint32 index = 3;
    // 每页大小
    uint32 size = 4;
}
